--- a/requirements.txt
+++ b/requirements.txt
@@ -53,11 +53,13 @@ packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 pathspec==0.12.1
+patsy==1.0.1
 pexpect==4.9.0
 pika==1.3.2
 pillow==11.2.1
 platformdirs==4.3.7
 plotly==6.0.1
+plotly-express==0.4.1
 pluggy==1.5.0
 port-for==0.7.4
 prompt_toolkit==3.0.51
@@ -90,6 +92,7 @@ referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 rpds-py==0.24.0
+scipy==1.15.3
 seaborn==0.13.2
 setuptools==78.1.0
 six==1.17.0
@@ -98,6 +101,7 @@ soupsieve==2.7
 SQLAlchemy==2.0.40
 sqlfluff==3.3.1
 stack-data==0.6.3
+statsmodels==0.14.4
 streamlit==1.44.1
 tblib==3.1.0
 tenacity==9.1.2
